cmdline_helper: Enable all (physical & logical) cores by default when using taskset -- greatly increases performance on aarch64 (e.g., cellphone CPUs)

--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cmdline_helper-validation.py\n"
+      "Overwriting cmdline_helper-validation.py\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
     "#            if available. Calls Execute_input_string() to\n",
     "#            redirect output from stdout & stderr to desired\n",
     "#            destinations.\n",
-    "def Execute(executable, executable_output_arguments = \"\", file_to_redirect_stdout = os.devnull):\n",
+    "def Execute(executable, executable_output_arguments = \"\", file_to_redirect_stdout = os.devnull, use_ht_cores=True):\n",
     "    # Step 1: Delete old version of executable file\n",
     "    if file_to_redirect_stdout != os.devnull:\n",
     "        delete_existing_files(file_to_redirect_stdout)\n",
@@ -272,8 +272,11 @@
     "    taskset_exists = check_executable_exists(\"taskset\",error_if_not_found=False)\n",
     "    if taskset_exists == True:\n",
     "        execute_string += \"taskset -c 0\"\n",
-    "        N_physical_cores = int(multiprocessing.cpu_count()/2) # To account for hyperthreading\n",
-    "        for i in range(N_physical_cores-1):\n",
+    "        N_cores_to_use = int(multiprocessing.cpu_count()) # Use all cores by default\n",
+    "        # NOTE: You may observe a speed-up by using only *PHYSICAL* (as opposed to logical/hyperthreading) cores:\n",
+    "        if use_HT_cores == False:\n",
+    "            N_cores_to_use = int(multiprocessing.cpu_count()/2) # To account for hyperthreading cores\n",
+    "        for i in range(N_cores_to_use-1):\n",
     "            execute_string += \",\"+str(i+1)\n",
     "        execute_string += \" \"\n",
     "    execute_string += os.path.join(\".\", executable)+\" \"+executable_output_arguments\n",
@@ -460,7 +463,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-cmdline_helper.ipynb to latex\n",
-      "[NbConvertApp] Writing 40753 bytes to Tutorial-cmdline_helper.tex\n",
+      "[NbConvertApp] Writing 41551 bytes to Tutorial-cmdline_helper.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
