--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -92,7 +92,7 @@
     "#          Zach Etienne\n",
     "#          zachetie **at** gmail **dot* com\n",
     "\n",
-    "import io, os, shlex, subprocess, sys, time, multiprocessing, platform"
+    "import io, os, shlex, subprocess, sys, time, multiprocessing, platform, getpass"
    ]
   },
   {
@@ -272,18 +272,20 @@
     "    taskset_exists = check_executable_exists(\"taskset\",error_if_not_found=False)\n",
     "    if taskset_exists == True:\n",
     "        execute_string += \"taskset -c 0\"\n",
-    "        has_HT_cores = False # Does CPU have hyperthreading cores?\n",
-    "        if platform.processor() != '': # If processor string returns null, then assume CPU does not support hyperthreading.\n",
-    "                                       # This will yield correct behavior on ARM (e.g., cell phone) CPUs.\n",
-    "            has_HT_cores=True\n",
-    "        if has_HT_cores == True:\n",
-    "            # NOTE: You will observe a speed-up by using only *PHYSICAL* (as opposed to logical/hyperthreading) cores:\n",
-    "            N_cores_to_use = int(multiprocessing.cpu_count()/2) # To account for hyperthreading cores\n",
-    "        else:\n",
-    "            N_cores_to_use = int(multiprocessing.cpu_count()) # Use all cores if none are hyperthreading cores.\n",
-    "                                                              # This will happen on ARM (e.g., cellphone) CPUs \n",
-    "        for i in range(N_cores_to_use-1):\n",
-    "            execute_string += \",\"+str(i+1)\n",
+    "        if getpass.getuser() != \"jovyan\": # on mybinder, username is jovyan, and taskset -c 0 is the fastest option.\n",
+    "            # If not on mybinder and taskset exists:\n",
+    "            has_HT_cores = False # Does CPU have hyperthreading cores?\n",
+    "            if platform.processor() != '': # If processor string returns null, then assume CPU does not support hyperthreading.\n",
+    "                                           # This will yield correct behavior on ARM (e.g., cell phone) CPUs.\n",
+    "                has_HT_cores=True\n",
+    "            if has_HT_cores == True:\n",
+    "                # NOTE: You will observe a speed-up by using only *PHYSICAL* (as opposed to logical/hyperthreading) cores:\n",
+    "                N_cores_to_use = int(multiprocessing.cpu_count()/2) # To account for hyperthreading cores\n",
+    "            else:\n",
+    "                N_cores_to_use = int(multiprocessing.cpu_count()) # Use all cores if none are hyperthreading cores.\n",
+    "                                                                  # This will happen on ARM (e.g., cellphone) CPUs \n",
+    "            for i in range(N_cores_to_use-1):\n",
+    "                execute_string += \",\"+str(i+1)\n",
     "        execute_string += \" \"\n",
     "    execute_string += os.path.join(\".\", executable)+\" \"+executable_output_arguments\n",
     "\n",
@@ -461,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +471,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-cmdline_helper.ipynb to latex\n",
-      "[NbConvertApp] Writing 42179 bytes to Tutorial-cmdline_helper.tex\n",
+      "[NbConvertApp] Writing 41987 bytes to Tutorial-cmdline_helper.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
