--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -41,7 +41,32 @@
     "* Greek indices refer to four-dimensional quantities where the zeroth component indicates temporal (time) component.\n",
     "* Latin indices refer to three-dimensional quantities. This is somewhat counterintuitive since Python always indexes its lists starting from 0. As a result, the zeroth component of three-dimensional quantities will necessarily indicate the first *spatial* direction.\n",
     "\n",
-    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module)."
+    "For instance, in calculating the first term of [$T_{\\rm EM}^{\\mu\\nu}$](#em_tensor) (specifically, ${\\rm Term\\ 1} = b^2 u^\\mu u^\\nu$), we use Greek indices:\n",
+    "\n",
+    "```\n",
+    "T4EMUU = ixp.zerorank2(DIM=4)\n",
+    "for mu in range(4):\n",
+    "    for nu in range(4):\n",
+    "        # Term 1: b^2 u^{\\mu} u^{\\nu}\n",
+    "        T4EMUU[mu][nu] = smallb2*u4U[mu]*u4U[nu]\\\n",
+    "```\n",
+    "\n",
+    "When we calculate [$\\beta_i = \\gamma_{ij} \\beta^j$](#4metric), we use Latin indices:\n",
+    "```\n",
+    "betaD = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        betaD[i] += gammaDD[i][j] * betaU[j]\n",
+    "```\n",
+    "\n",
+    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module). This can be seen when we handle the second term of [$\\partial_t \\tilde{S}_i$](#construct_si) (or, more specifically, the second term thereof: $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$):\n",
+    "```\n",
+    "# The second term: \\alpha \\sqrt{\\\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
+    "for i in range(DIM):\n",
+    "    for mu in range(4):\n",
+    "        for nu in range(4):\n",
+    "            Stilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DDdD[mu][nu][i+1] / 2\n",
+    "```"
    ]
   },
   {
@@ -1265,21 +1290,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
