Read through to check for consistency, made minor edits to grammar and changed indexing to be consistent and correct in one instance.

--- a/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
@@ -105,7 +105,7 @@
     "1. Next, declare some gridfunctions that are provided as input to the equations:\n",
     "    1. $\\alpha$, $\\beta^i$, and $\\gamma_{ij}$: These ADM 3+1 metric quantities are declared in the ADMBase Einstein Toolkit thorn, and are assumed to be made available to $\\texttt{GiRaFFE}$ at this stage.\n",
     "    1. The Valencia 3-velocity $v^i_{(n)}$ and vector potential $A_i$: Declared by $\\texttt{GiRaFFE}$, and will have their initial values set in the separate thorn **GiRaFFEfood_HO**.\n",
-    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently **(Error check: how does this sentence end?)**\n"
+    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently on the interior of the grid. In the ghost zones, we will have to use lower-order derivatives.\n"
    ]
   },
   {
@@ -398,7 +398,7 @@
     "$$T^{\\mu \\nu}_{\\rm EM} = \\underbrace{b^2 u^{\\mu} u^{\\nu}}_{\\rm Term\\ 1} + \n",
     "\\underbrace{\\frac{b^2}{2} g^{\\mu \\nu}}_{\\rm Term\\ 2}\n",
     "- \\underbrace{b^{\\mu} b^{\\nu}}_{\\rm Term\\ 3}.$$\n",
-    "Because $u^0$ is a separate variable, we could build the $00$ component separately, then the $\\mu0$ and $0\\nu$ components, and finally the $\\mu\\nu$ components. Alternatively, for clarity, we could create a temporary variable $u^\\mu=\\left( u^0, u^i \\right)$"
+    "Because $u^0$ is a separate variable, we will create a temporary variable $u^\\mu=\\left( u^0, u^i \\right)$,"
    ]
   },
   {
@@ -444,11 +444,11 @@
     "Finally, we will return our attention to the time evolution equation (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)),\n",
     "\\begin{align}\n",
     "\\partial_t \\tilde{S}_i &= - \\partial_j \\underbrace{\\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right)}_{\\rm SevolParenUD} + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} \\\\\n",
-    "                       &= - \\partial_j{\\rm SevolParenUD[i][j]} + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} .\n",
+    "                       &= - \\partial_j{\\rm SevolParenUD[j][i]} + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} .\n",
     "\\end{align}\n",
-    "We will first take construct `SevolParenUD`, then use its derivatives to construct the evolution equation. Note that \n",
+    "We will first construct `SevolParenUD`, then use its derivatives to construct the evolution equation. Note that \n",
     "\\begin{align}\n",
-    "{\\rm SevolParenUD[i][j]} &= \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\\\\n",
+    "{\\rm SevolParenUD[j][i]} &= \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\\\\n",
     "                             &= \\alpha \\sqrt{\\gamma} g_{\\mu i} T^{\\mu j}_{\\rm EM}.\n",
     "\\end{align}"
    ]
@@ -473,14 +473,15 @@
     "for i in range(DIM):\n",
     "    for j in range (DIM):\n",
     "        for mu in range(4):\n",
-    "            SevolParenUD[i][j] += alpsqrtgam * g4DD[mu][i+1] * T4EMUU[mu][j+1]\n",
+    "            SevolParenUD[j][i] += alpsqrtgam * g4DD[mu][i+1] * T4EMUU[mu][j+1]\n",
     "            \n",
     "SevolParenUD_dD = ixp.declarerank3(\"SevolParenUD_dD\",\"nosym\")\n",
     "\n",
     "Stilde_rhsD = ixp.zerorank1()\n",
     "# The first term: \\alpha \\sqrt{\\gamma} \\partial_j T^j_{{\\rm EM} i}\n",
     "for i in range(DIM):\n",
-    "    Stilde_rhsD[i] += -SevolParenUD_dD[i][j][j]\n",
+    "    for j in range(DIM):\n",
+    "        Stilde_rhsD[i] += -SevolParenUD_dD[j][i][j]\n",
     "\n",
     "# The second term: \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
     "for i in range(DIM):\n",
@@ -501,7 +502,8 @@
     "We will also need to evolve the vector potential $A_i$. This evolution is given as eq. 17 in the [$\\texttt{GiRaFFE}$](https://arxiv.org/pdf/1704.00599.pdf) paper:\n",
     "$$\\boxed{\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\underbrace{\\alpha \\Phi - \\beta^j A_j}_{\\rm AevolParen}),}$$\n",
     "where $\\epsilon_{ijk} = [ijk] \\sqrt{\\gamma}$ is the antisymmetric Levi-Civita tensor, the drift velocity $v^i = u^i/u^0$, $\\gamma$ is the determinant of the three metric, $B^k$ is the magnetic field, $\\alpha$ is the lapse, and $\\beta$ is the shift.\n",
-    "The scalar electric potential $\\Phi$ is also evolved by eq. 19:\n",
+    "\n",
+    "We also need the scalar electric potential $\\Phi$, which is evolved by eq. 19:\n",
     "$$\\boxed{\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\underbrace{\\alpha\\sqrt{\\gamma} \\gamma^{ij} A_i - \\beta^j [\\sqrt{\\gamma} \\Phi]}_{\\rm PevolParenU[j]}) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi],}$$\n",
     "with $\\xi$ chosen as a damping factor. "
    ]
@@ -539,7 +541,7 @@
     "# {\\rm AevolParen} = \\alpha \\Phi - \\beta^j A_j\n",
     "AevolParen = alpha*Phi\n",
     "for j in range(DIM):\n",
-    "    AevolParen    += -betaU[j] * AD[j]\n",
+    "    AevolParen += -betaU[j] * AD[j]\n",
     "\n",
     "# {\\rm PevolParenU[j]} = \\alpha\\sqrt{\\gamma} \\gamma^{ij} A_i - \\beta^j [\\sqrt{\\gamma} \\Phi]\n",
     "for j in range(DIM):\n",
@@ -709,7 +711,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order_v2.ipynb to latex\n",
-      "[NbConvertApp] Writing 76747 bytes to Tutorial-GiRaFFE_Higher_Order_v2.tex\n",
+      "[NbConvertApp] Writing 73620 bytes to Tutorial-GiRaFFE_Higher_Order_v2.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
