--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -115,7 +115,7 @@
     "1. Next, declare some gridfunctions that are provided as input to the equations:\n",
     "    1. $\\alpha$, $\\beta^i$, and $\\gamma_{ij}$: These ADM 3+1 metric quantities are declared in the ADMBase Einstein Toolkit thorn, and are assumed to be made available to $\\texttt{GiRaFFE}$ at this stage.\n",
     "    1. The Valencia 3-velocity $v^i_{(n)}$ and vector potential $A_i$: Declared by $\\texttt{GiRaFFE}$, and will have their initial values set in the separate thorn **GiRaFFEfood_HO**.\n",
-    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently **(Error check: how does this sentence end?)**"
+    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently on the interior of the grid. In the ghost zones, we will have to use lower-order derivatives.\n"
    ]
   },
   {
@@ -408,7 +408,7 @@
     "$$T^{\\mu \\nu}_{\\rm EM} = \\underbrace{b^2 u^{\\mu} u^{\\nu}}_{\\rm Term\\ 1} + \n",
     "\\underbrace{\\frac{b^2}{2} g^{\\mu \\nu}}_{\\rm Term\\ 2}\n",
     "- \\underbrace{b^{\\mu} b^{\\nu}}_{\\rm Term\\ 3}.$$\n",
-    "Because $u^0$ is a separate variable, we could build the $00$ component separately, then the $\\mu0$ and $0\\nu$ components, and finally the $\\mu\\nu$ components. Alternatively, for clarity, we could create a temporary variable $u^\\mu=\\left( u^0, u^i \\right)$\n"
+    "Because $u^0$ is a separate variable, we will create a temporary variable $u^\\mu=\\left( u^0, u^i \\right)$.\n"
    ]
   },
   {
@@ -1072,7 +1072,7 @@
     "We will also need to evolve the vector potential $A_i$. This evolution is given as eq. 17 in the [$\\texttt{GiRaFFE}$](https://arxiv.org/pdf/1704.00599.pdf) paper:\n",
     "$$\\boxed{\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\underbrace{\\alpha \\Phi - \\beta^j A_j}_{\\rm AevolParen}),}$$\n",
     "where $\\epsilon_{ijk} = [ijk] \\sqrt{\\gamma}$ is the antisymmetric Levi-Civita tensor, the drift velocity $v^i = u^i/u^0$, $\\gamma$ is the determinant of the three metric, $B^k$ is the magnetic field, $\\alpha$ is the lapse, and $\\beta$ is the shift.\n",
-    "The scalar electric potential $\\Phi$ is also evolved by eq. 19:\n",
+    "We will also need the scalar electric potential $\\Phi$, which is evolved by eq. 19:\n",
     "$$\\boxed{\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\underbrace{\\alpha\\sqrt{\\gamma} \\gamma^{ij} A_i - \\beta^j [\\sqrt{\\gamma} \\Phi]}_{\\rm PevolParenU[j]}) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi],}$$\n",
     "with $\\xi$ chosen as a damping factor. "
    ]
@@ -1110,7 +1110,7 @@
     "# {\\rm AevolParen} = \\alpha \\Phi - \\beta^j A_j\n",
     "AevolParen = alpha*Phi\n",
     "for j in range(DIM):\n",
-    "    AevolParen    += -betaU[j] * AD[j]\n",
+    "    AevolParen += -betaU[j] * AD[j]\n",
     "\n",
     "# {\\rm PevolParenU[j]} = \\alpha\\sqrt{\\gamma} \\gamma^{ij} A_i - \\beta^j [\\sqrt{\\gamma} \\Phi]\n",
     "for j in range(DIM):\n",
