Cparameters improvement: All tutorial modules now updated to latest API

--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -137,7 +137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_AW,M_PI = par.Cparameters(\"REAL\",thismodule,[\"mu_AW\",\"M_PI\"]) # The wave speed and pi in C\n",
+    "mu_AW = par.Cparameters(\"REAL\",thismodule,[\"mu_AW\"], -0.5) # The wave speed\n",
+    "M_PI  = par.Cparameters(\"#define\",thismodule,[\"M_PI\"], \"\")\n",
+    "\n",
     "gammamu = 1/sp.sqrt(1-mu_AW**2)\n",
     "\n",
     "# We'll use reference_metric.py to define x and y\n",
