--- a/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
@@ -79,7 +79,11 @@
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
-    "B_p_aligned_rotator,R_NS_aligned_rotator = par.Cparameters(\"REAL\",thismodule,[\"B_p_aligned_rotator\",\"R_NS_aligned_rotator\"]) # A constant defining the intensity of the magnetic field and the Neutron star Radius\n"
+    "B_p_aligned_rotator,R_NS_aligned_rotator = par.Cparameters(\"REAL\",thismodule,\n",
+    "                                                           # B_p_aligned_rotator = the intensity of the magnetic field and\n",
+    "                                                           # R_NS_aligned_rotator= \"Neutron star\" radius\n",
+    "                                                           [\"B_p_aligned_rotator\",\"R_NS_aligned_rotator\"],\n",
+    "                                                           [1e-5, 1.0])"
    ]
   },
   {
@@ -197,7 +201,9 @@
     "        for k in range(DIM):\n",
     "            BU[i] += LeviCivitaSymbolDDD[i][j][k] * ADdD[k][j]\n",
     "\n",
-    "Omega_aligned_rotator = par.Cparameters(\"REAL\",thismodule,\"Omega_aligned_rotator\") # The angular velocity of the NS\n",
+    "# The angular velocity of the \"neutron star\"\n",
+    "Omega_aligned_rotator = par.Cparameters(\"REAL\",thismodule,\"Omega_aligned_rotator\",1e3) \n",
+    "\n",
     "unit_zU = ixp.zerorank1()\n",
     "unit_zU[2] = 1\n",
     "\n",
@@ -233,16 +239,17 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warnings below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::B_p_aligned_rotator\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::R_NS_aligned_rotator\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::Omega_aligned_rotator\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::B_p_aligned_rotator\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::R_NS_aligned_rotator\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::Omega_aligned_rotator\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
@@ -298,7 +305,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb to latex\n",
-      "[NbConvertApp] Writing 42994 bytes to Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
+      "[NbConvertApp] Writing 43773 bytes to Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
