--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -85,7 +85,9 @@
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
     "# Input parameters:\n",
-    "M, a, r0 = par.Cparameters(\"REAL\", thismodule, [\"M\", \"a\", \"r0\"])\n",
+    "M, a, r0 = par.Cparameters(\"REAL\", thismodule,\n",
+    "                           [\"M\", \"a\", \"r0\"],\n",
+    "                           [1.0, 0.9,  1.0])\n",
     "\n",
     "# Auxiliary variables:\n",
     "rho2 = sp.symbols('rho2', real=True)"
@@ -385,9 +387,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter ShiftedKerrSchild::M\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter ShiftedKerrSchild::a\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter ShiftedKerrSchild::r0\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ShiftedKerrSchild::M\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ShiftedKerrSchild::a\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ShiftedKerrSchild::r0\n",
       "^^^ Ignore the minor warning(s) above. ^^^\n",
       "\n",
       "Consistency check between Brill-Lindquist tutorial and NRPy+ BSSN.BrillLindquist module:\n",
@@ -471,7 +473,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb to latex\n",
-      "[NbConvertApp] Writing 50382 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n",
+      "[NbConvertApp] Writing 53095 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -495,21 +497,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
