--- a/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
+++ b/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "# Step 1: Set psi, the conformal factor:\n",
     "# Input parameters:\n",
-    "M = par.Cparameters(\"REAL\", thismodule, [\"M\"])\n",
+    "M = par.Cparameters(\"REAL\", thismodule, [\"M\"], 1.0)\n",
     "\n",
     "# Auxiliary variables:\n",
     "psi0 = sp.symbols('psi0', real=True)"
@@ -267,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter StaticTrumpet::M\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter StaticTrumpet::M\n",
       "^^^ Ignore the minor warning(s) above. ^^^\n",
       "\n",
       "Consistency check between Brill-Lindquist tutorial and NRPy+ BSSN.BrillLindquist module:\n",
@@ -351,7 +351,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb to latex\n",
-      "[NbConvertApp] Writing 43241 bytes to Tutorial-ADM_Initial_Data-StaticTrumpet.tex\n",
+      "[NbConvertApp] Writing 43509 bytes to Tutorial-ADM_Initial_Data-StaticTrumpet.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -375,21 +375,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
