--- a/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
+++ b/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
@@ -98,10 +98,8 @@
     "#  and dimensionless spin chi in UIUC quasi-isotropic coordinates,\n",
     "#   see https://arxiv.org/abs/1001.4077\n",
     "# Input parameters:\n",
-    "M,chi = par.Cparameters(\"REAL\", thismodule, [\"M\",\"chi\"])\n",
+    "M,chi = par.Cparameters(\"REAL\", thismodule, [\"M\",\"chi\"],[1.0,0.99])\n",
     "\n",
-    "# Auxiliary variables:\n",
-    "a,rp,rm,rBL,SIG,DEL,AA = sp.symbols('a rp rm rBL SIG DEL AA', real=True)\n",
     "# Spin per unit mass\n",
     "a = M*chi"
    ]
@@ -350,9 +348,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::M\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::chi\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter UIUCBlackHole::M\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter UIUCBlackHole::chi\n",
       "^^^ Ignore the minor warning(s) above. ^^^\n",
       "\n",
       "Consistency check between Brill-Lindquist tutorial and NRPy+ BSSN.BrillLindquist module:\n",
@@ -436,7 +433,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb to latex\n",
-      "[NbConvertApp] Writing 50525 bytes to Tutorial-ADM_Initial_Data-UIUC_BlackHole.tex\n",
+      "[NbConvertApp] Writing 50581 bytes to Tutorial-ADM_Initial_Data-UIUC_BlackHole.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -460,21 +457,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
