--- a/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
@@ -565,7 +565,10 @@
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
     "# Input parameters read in from the TOV data file:\n",
-    "rbar,expnu,exp4phi,P,rho = par.Cparameters(\"REAL\", thismodule, [\"rbar\",\"expnu\",\"exp4phi\",\"P\",\"rho\"])"
+    "rbar,expnu,exp4phi,P,rho = par.Cparameters(\"REAL\", thismodule,\n",
+    "                                           [\"rbar\",\"expnu\",\"exp4phi\",\"P\", \"rho\"],\n",
+    "                                           [ 1e300,  1e300,    1e300,1e300,1e300]) # Must be read from TOV data \n",
+    "                                                                      # file; set to crazy values to ensure this"
    ]
   },
   {
@@ -721,8 +724,7 @@
     "1. First we define functions ID_TOV_ADM_quantities() and ID_TOV_TUPMUNU() that call the [1D TOV interpolator function](../edit/TOV/tov_interp.h) to evaluate the ADM spacetime quantities and $T^{\\mu\\nu}$, respectively, at any given point $(r,\\theta,\\phi)$ in the Spherical basis. All quantities are defined as above.\n",
     "1. Next we will construct the BSSN/ADM source terms $\\{S_{ij},S_{i},S,\\rho\\}$ in the Spherical basis\n",
     "1. Then we will perform the Jacobian transformation on $\\{S_{ij},S_{i},S,\\rho\\}$ to the desired (xx0,xx1,xx2) basis\n",
-    "1. Next we call the *Numerical* Spherical ADM$\\to$Curvilinear BSSN converter function to conver the above ADM quantities to the rescaled BSSN quantities in the desired curvilinear coordinate system: [BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py](../edit/BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb).\n",
-    "\n"
+    "1. Next we call the *Numerical* Spherical ADM$\\to$Curvilinear BSSN converter function to convert the above ADM quantities to the rescaled BSSN quantities in the desired curvilinear coordinate system: [BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py](../edit/BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb)."
    ]
   },
   {
@@ -742,7 +744,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb to latex\n",
-      "[NbConvertApp] Writing 63977 bytes to Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
+      "[NbConvertApp] Writing 67639 bytes to Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
