--- a/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
@@ -72,10 +72,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n"
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n"
      ]
     }
    ],
@@ -297,7 +296,7 @@
     "        for j in range(DIM):\n",
     "            beta_rhsU[i] += betaU[j]*betaU_dupD[i][j]\n",
     "    # Compute right-hand side of B^i:\n",
-    "    eta = par.Cparameters(\"REAL\",thismodule,[\"eta\"])\n",
+    "    eta = par.Cparameters(\"REAL\", thismodule, [\"eta\"],2.0)\n",
     "\n",
     "    # Step 3.a.ii: Compute right-hand side of B^i\n",
     "    # *  \\partial_t B^i     = \\beta^j B^i_{,j} + 3/4 * \\partial_0 \\Lambda^i - eta B^i\n",
@@ -456,7 +455,7 @@
     "                B_rhsU[i] += -sp.Rational(3,4)*betaU[j]*GammabarUDD[i][m][j]*Bq.LambdabarU[m]\n",
     "    # Term 6: - \\eta B^i\n",
     "    # eta is a free parameter; we declare it here:\n",
-    "    eta = par.Cparameters(\"REAL\",thismodule,[\"eta\"])\n",
+    "    eta = par.Cparameters(\"REAL\", thismodule, [\"eta\"],2.0)\n",
     "    for i in range(DIM):\n",
     "        B_rhsU[i] += -eta*BU[i]"
    ]
@@ -522,10 +521,12 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warnings below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between BSSN.BSSN_gauge_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
@@ -598,7 +599,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb to latex\n",
-      "[NbConvertApp] Writing 66091 bytes to Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.tex\n",
+      "[NbConvertApp] Writing 66163 bytes to Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -622,21 +623,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
