--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -124,9 +124,11 @@
     "# Variables needed for initial data given in spherical basis\n",
     "r, th, ph = gri.register_gridfunctions(\"AUX\",[\"r\",\"th\",\"ph\"])\n",
     "\n",
-    "r_in,r_at_max_density,a,M = par.Cparameters(\"REAL\",thismodule,[\"r_in\",\"r_at_max_density\",\"a\",\"M\"])\n",
+    "r_in,r_at_max_density,a,M = par.Cparameters(\"REAL\",thismodule,\n",
+    "                                            [\"r_in\",\"r_at_max_density\",    \"a\",\"M\"],\n",
+    "                                            [   6.0,              12.0, 0.9375,1.0])\n",
     "\n",
-    "kappa,gamma = par.Cparameters(\"REAL\",thismodule,[\"kappa\",\"gamma\"])\n",
+    "kappa,gamma = par.Cparameters(\"REAL\",thismodule,[\"kappa\",\"gamma\"], [1.0e-3, 4.0/3.0])\n",
     "\n",
     "LorentzFactor = gri.register_gridfunctions(\"AUX\",\"LorentzFactor\")"
    ]
@@ -600,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_b = par.Cparameters(\"REAL\",thismodule,\"A_b\")\n",
+    "A_b = par.Cparameters(\"REAL\",thismodule,\"A_b\",1.0)\n",
     "\n",
     "A_3vecpotentialD = ixp.zerorank1()\n",
     "# Set A_phi = A_b*rho_initial FIXME: why is there a sign error?\n",
@@ -1056,13 +1058,14 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
       "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
       "IDalpha - fmid.IDalpha = 0\n",
@@ -1142,7 +1145,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-FishboneMoncriefID.ipynb to latex\n",
-      "[NbConvertApp] Writing 126206 bytes to Tutorial-FishboneMoncriefID.tex\n",
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 8, column 1)\n",
+      "[NbConvertApp] Writing 130651 bytes to Tutorial-FishboneMoncriefID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1166,21 +1170,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
