--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -92,9 +92,10 @@
     "# Create a parameter to control the initial data choice. For now, this will only have Exact Wald as an option.\n",
     "par.initialize_param(par.glb_param(\"char\", thismodule, \"IDchoice\", \"Exact_Wald\"))\n",
     "\n",
-    "# Step 1b: Set Cparameters we need to use and the gridfunctions we'll need.\n",
-    "M,M_PI = par.Cparameters(\"REAL\",thismodule,[\"M\",\"M_PI\"]) # The mass of the black hole, and pi in C\n",
-    "KerrSchild_radial_shift = par.Cparameters(\"REAL\",thismodule,\"KerrSchild_radial_shift\")\n"
+    "# Step 1b: Set needed Cparameters\n",
+    "M    = par.Cparameters(\"REAL\",thismodule,[\"M\"],1.0)      # The mass of the black hole\n",
+    "M_PI = par.Cparameters(\"#define\",thismodule,[\"M_PI\"],\"\") # pi, 3.141592...\n",
+    "KerrSchild_radial_shift = par.Cparameters(\"REAL\",thismodule,\"KerrSchild_radial_shift\",0.4) # Default value for ExactWald"
    ]
   },
   {
@@ -290,17 +291,18 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warnings below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::IDchoice\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::KerrSchild_radial_shift\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::KerrSchild_radial_shift\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
@@ -414,7 +416,7 @@
     "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "for i in range(DIM):\n",
-    "    print(\"StildeD[\"+str(i)+\"] - gfho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gfho.StildeD[i]))\n"
+    "    print(\"StildeD[\"+str(i)+\"] - gfho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gfho.StildeD[i]))"
    ]
   },
   {
@@ -440,7 +442,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO.ipynb to latex\n",
-      "[NbConvertApp] Writing 55226 bytes to Tutorial-GiRaFFEfood_HO.tex\n",
+      "[NbConvertApp] Writing 54621 bytes to Tutorial-GiRaFFEfood_HO.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -464,21 +466,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
