--- a/Tutorial-MaxwellCartesian.ipynb
+++ b/Tutorial-MaxwellCartesian.ipynb
@@ -519,8 +519,9 @@
    "outputs": [],
    "source": [
     "# Step 1: Declare free parameters intrinsic to these initial data\n",
-    "amp = par.Cparameters(\"REAL\",thismodule,\"amp\")\n",
-    "lam = par.Cparameters(\"REAL\",thismodule,\"lam\")\n",
+    "amp,lam = par.Cparameters(\"REAL\",thismodule,\n",
+    "                          [\"amp\",\"lam\"], \n",
+    "                          [1.0,1.0]) # __name__ = \"MaxwellCartesian_ID\", this module's name\n",
     "\n",
     "# Step 2: Set the initial data\n",
     "AidD = ixp.zerorank1()\n",
@@ -588,20 +589,19 @@
     "gri.glb_gridfcs_list = []\n",
     "par.set_parval_from_str(\"System_to_use\",\"System_I\")\n",
     "\n",
-    "print(\"vvv Ignore the minor warning below. vvv\")\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
     "import Maxwell.MaxwellCartesian_ID as mwid\n",
     "mwid.MaxwellCartesian_ID()\n",
     "\n",
-    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "print(\"psi_ID - mwid.psi_ID = \" + str(psi_ID - mwid.psi_ID))\n",
     "for i in range(DIM):\n",
-    "\n",
     "    print(\"AidD[\"+str(i)+\"] - mwid.AidD[\"+str(i)+\"] = \" + str(AidD[i] - mwid.AidD[i]))\n",
-    "    print(\"EidD[\"+str(i)+\"] - mwid.EidD[\"+str(i)+\"] = \" + str(EidD[i] - mwid.EidD[i]))\n"
+    "    print(\"EidD[\"+str(i)+\"] - mwid.EidD[\"+str(i)+\"] = \" + str(EidD[i] - mwid.EidD[i]))"
    ]
   },
   {
@@ -621,8 +621,8 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter Maxwell.MaxwellCartesian_ID::amp\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter Maxwell.MaxwellCartesian_ID::lam\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter Maxwell.MaxwellCartesian_ID::amp\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter Maxwell.MaxwellCartesian_ID::lam\n",
       "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
       "Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
@@ -643,20 +643,19 @@
     "gri.glb_gridfcs_list = []\n",
     "par.set_parval_from_str(\"System_to_use\",\"System_II\")\n",
     "\n",
-    "print(\"vvv Ignore the minor warning below. vvv\")\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
     "mwid.MaxwellCartesian_ID()\n",
     "\n",
-    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "print(\"psi_ID - mwid.psi_ID = \" + str(psi_ID - mwid.psi_ID))\n",
     "print(\"Gamma_ID - mwid.Gamma_ID = \" + str(Gamma_ID - mwid.Gamma_ID))\n",
     "for i in range(DIM):\n",
-    "\n",
     "    print(\"AidD[\"+str(i)+\"] - mwid.AidD[\"+str(i)+\"] = \" + str(AidD[i] - mwid.AidD[i]))\n",
-    "    print(\"EidD[\"+str(i)+\"] - mwid.EidD[\"+str(i)+\"] = \" + str(EidD[i] - mwid.EidD[i]))\n"
+    "    print(\"EidD[\"+str(i)+\"] - mwid.EidD[\"+str(i)+\"] = \" + str(EidD[i] - mwid.EidD[i]))"
    ]
   },
   {
@@ -682,7 +681,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-MaxwellCartesian.ipynb to latex\n",
-      "[NbConvertApp] Writing 126142 bytes to Tutorial-MaxwellCartesian.tex\n",
+      "[NbConvertApp] Writing 126577 bytes to Tutorial-MaxwellCartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -706,21 +705,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
