SEOBNR: small updates to Hamiltonian and initial conditions.

--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -1068,7 +1068,7 @@
     "        &= \\frac{ \\Delta_{r} }{ \\Sigma } p_{r}^{2} + \\frac{ 1 }{ \\Sigma } p_{\\theta}^{2} + \\frac{ \\Sigma }{ \\Lambda_{t} \\sin^{2} \\theta } p_{\\phi}^{2}.\n",
     "\\end{align*}\n",
     "\n",
-    "Converting Boyer-Lindquist coordinates to tortoise coordinates <font color='red'>(find reference)</font>, we have\n",
+    "Converting Boyer-Lindquist coordinates to tortoise coordinates <font color='red'>(the transformation of which is found in the Appendix of [P2010](https://arxiv.org/abs/0912.3466v2) but does not agree with the following)</font>, we have\n",
     "\n",
     "\\begin{align*}\n",
     "    p_{r} &= \\hat{\\bf p} \\cdot {\\bf n} \\\\\n",
@@ -1687,7 +1687,7 @@
     "## Step 9.c: $\\boldsymbol{\\sigma}^{*}$ coefficient \\[Back to [top](#toc)\\]\n",
     "$$\\label{sigmastarcoeff}$$\n",
     "\n",
-    "We will break down both $\\boldsymbol{\\sigma}^{*}\\ {\\rm coefficient}$ into three terms:\n",
+    "We will break down $\\boldsymbol{\\sigma}^{*}\\ {\\rm coefficient}$ into three terms:\n",
     "\n",
     "\\begin{equation*}\n",
     "    \\boldsymbol{\\sigma}^{*}\\ {\\rm coefficient} = \\boldsymbol{\\sigma}^{*}\\ {\\rm coefficient\\ Term\\ 1} + \\boldsymbol{\\sigma}^{*}\\ {\\rm coefficient\\ Term\\ 2} + \\boldsymbol{\\sigma}^{*}\\ {\\rm coefficient\\ Term\\ 3}\n",
@@ -3213,7 +3213,7 @@
     "    \\Delta_u = \\bar{\\Delta}_{u} \\left[ \\smash[b]{\\underbrace{ 1 + \\eta \\Delta_{0} + \\eta \\log \\left( 1 + \\Delta_{1} u + \\Delta_{2} u^{2} + \\Delta_{3} u^{3} + \\Delta_{4} u^{4} \\right) }_{\\Delta_{u}\\ {\\rm calibration\\ term}}} \\vphantom{\\underbrace{1}_{n}} \\right]\n",
     "\\end{equation*}\n",
     "\n",
-    "We compute $\\bar{\\Delta}_{u}$  in [this cell](#deltaubar) and $\\Delta_{u}$ calibration term in [this cell](#deltaucalib).  <font color='red'>Note that we take the absolute value of $\\Delta_{u}$ in the LALSuite code (see LALSimIMRSpinEOBHamiltonianPrec.c line 279).  Also note that there are two additional terms in the LALSuite code whose origin is unclear.  The LIGO doc \"Changes to SEOBNRv1\" lists a paper that lists BB2011, which does not include any information on these additional terms.</font>"
+    "We compute $\\bar{\\Delta}_{u}$  in [this cell](#deltaubar) and $\\Delta_{u}$ calibration term in [this cell](#deltaucalib).  <font color='red'>Note that we take the absolute value of $\\Delta_{u}$ in the LALSuite code (see LALSimIMRSpinEOBHamiltonianPrec.c line 279).  Also note that there are two additional terms in the LALSuite code whose origin is unclear.  The LIGO doc \"Prescriptions for SEOBNRv2\" (\"Changes to SEOBNRv1\") cites PRD 89 (2014) 061502, which cites BB2011, which does not include any information on these additional terms (as far as I can tell).</font>"
    ]
   },
   {
