--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -18,33 +18,8 @@
     "* [Damour, et. al. (2009)](https://arxiv.org/abs/0811.2069) as DIN2009, and\n",
     "* [Pan, et. al. (2014)](https://arxiv.org/abs/1307.6232) as P2014.\n",
     "\n",
-    "<font color='green'>**This module has been validated against the LALSuite SEOBNRv3/SEOBNRv3_opt code that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.**</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='toc'></a>\n",
+    "<font color='green'>**This module has been validated against the LALSuite SEOBNRv3/SEOBNRv3_opt code that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.**</font>\n",
     "\n",
-    "# Table of Contents\n",
-    "$$\\label{toc}$$\n",
-    "\n",
-    "This module is organized as follows, matching the \"steps\" listed in [BCD2006](https://arxiv.org/abs/gr-qc/0508067):\n",
-    "\n",
-    "0. [Introduction:](#intro) The Physical System of Interest\n",
-    "1. [Step 1:](#step1) Initial Coordinate Choice\n",
-    "1. [Step 2:](#step2) Compute ${\\bf r}$, ${\\bf p}_{r}$, ${\\bf p}_{\\theta}$, and ${\\bf p}_{\\phi}$\n",
-    "1. [Step 3:](#step3) Rotate $\\hat{\\bf L} \\to {\\bf e}_{z}$\n",
-    "1. [Step 4:](#step4) Compute $\\dot{\\bf r}$\n",
-    "1. [Step 5:](#step5) Invert the rotation of Step 3\n",
-    "1. [Output](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='intro'></a>\n",
     "\n",
     "# Introduction: The Physical System of Interest \\[Back to [top](#toc)\\]\n",
@@ -77,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +63,25 @@
     "\n",
     "gamma = 0.577215664901532860606512090082402431\n",
     "Msol = 4.925491025543575903411922162094833998e-6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module is organized as follows, matching the \"steps\" listed in [BCD2006](https://arxiv.org/abs/gr-qc/0508067):\n",
+    "\n",
+    "1. [Step 1:](#step1) Initial Coordinate Choice\n",
+    "1. [Step 2:](#step2) Compute ${\\bf r}$, ${\\bf p}_{r}$, ${\\bf p}_{\\theta}$, and ${\\bf p}_{\\phi}$\n",
+    "1. [Step 3:](#step3) Rotate $\\hat{\\bf L} \\to {\\bf e}_{z}$\n",
+    "1. [Step 4:](#step4) Compute $\\dot{\\bf r}$\n",
+    "1. [Step 5:](#step5) Invert the rotation of Step 3\n",
+    "1. [Output](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -259,7 +253,7 @@
     "## Note \\[Back to [top](#toc)\\]\n",
     "\n",
     "\n",
-    "Since we began assuming $\\iota = 0$, we do not need to rotate $\\hat{\\bf r}$, $\\hat{\\bf v}$, $\\hat{\\bf L}_{N}$, ${\\bf S}_{1}$, ${\\bf S}_{2}$, $\\hat{\\bf S}_{1}$, or $\\hat{\\bf S}_{2}$ as is done at LALSimIMRSpinEOBInitialConditionsPrec.c Lines 840."
+    "Since we began assuming $\\iota = 0$, we do not need to rotate $\\hat{\\bf r}$, $\\hat{\\bf v}$, $\\hat{\\bf L}_{N}$, ${\\bf S}_{1}$, ${\\bf S}_{2}$, $\\hat{\\bf S}_{1}$, or $\\hat{\\bf S}_{2}$ as is done at LALSimIMRSpinEOBInitialConditionsPrec.c Lines 840-847."
    ]
   },
   {
