Renamed the original GiRaFFEfood module to more accurately describe it as the Exact Wald GiRaFFEfood module.

--- a/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "### NRPy+ Source Code for this module: [GiRaFFEfood_HO/GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py)\n",
+    "### NRPy+ Source Code for this module: [GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py)\n",
     "\n",
     "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
@@ -278,7 +278,7 @@
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
+    "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO_Exact_Wald](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py) module.\n"
    ]
   },
   {
@@ -322,7 +322,7 @@
     "\n",
     "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
-    "import GiRaFFEfood_HO.GiRaFFEfood_HO as gfho\n",
+    "import GiRaFFEfood_HO.GiRaFFEfood_HO_Exact_Wald as gfho\n",
     "gfho.GiRaFFEfood_HO()\n",
     "\n",
     "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
@@ -379,7 +379,7 @@
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
+    "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO_Exact_Wald](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py) module.\n"
    ]
   },
   {
@@ -441,8 +441,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO.ipynb to latex\n",
-      "[NbConvertApp] Writing 54621 bytes to Tutorial-GiRaFFEfood_HO.tex\n",
+      "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb to latex\n",
+      "[NbConvertApp] Writing 51272 bytes to Tutorial-GiRaFFEfood_HO_Exact_Wald.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -456,10 +456,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-GiRaFFEfood_HO.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_HO.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_HO.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_HO.tex\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_HO_Exact_Wald.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_HO_Exact_Wald.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_HO_Exact_Wald.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
