Fix Travis breakage caused by renaming GiRaFFEfood_HO -> GiRaFFEfood_HO_Exact_Wald

--- a/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
@@ -323,7 +323,7 @@
     "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
     "import GiRaFFEfood_HO.GiRaFFEfood_HO_Exact_Wald as gfho\n",
-    "gfho.GiRaFFEfood_HO()\n",
+    "gfho.GiRaFFEfood_HO_Exact_Wald()\n",
     "\n",
     "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
