S2F ScalarWave: fix code comment. No functional change

--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -88,9 +88,8 @@
     "#         and the ScalarWave_RHSs function (called later)\n",
     "import ScalarWave.ScalarWave_RHSs as swrhs\n",
     "\n",
-    "# Step 3: Set the spatial dimension parameter \n",
-    "#         to *FOUR* this time, and then read\n",
-    "#         the parameter as DIM.\n",
+    "# Step 3: Set the spatial dimension parameter\n",
+    "#         to 3, and then read the parameter as DIM.\n",
     "par.set_parval_from_str(\"grid::DIM\",3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
