Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: add central offset capability: update code comment to reflect update.

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -1546,7 +1546,7 @@
     "} 96\n",
     "\n",
     "##########\n",
-    "# Cartesian position of center of spherical grid (usually center of BH) -- CURRENTLY UNSUPPORTED!\n",
+    "# Cartesian position of center of spherical grid (usually center of BH).\n",
     "CCTK_REAL x_center \"x-position of center.\" STEERABLE=ALWAYS\n",
     "{\n",
     "  0:* :: \"\"\n",
